--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
+
   "author": "",
+  "engines": {
+    "node": "20.18.0"
+  },
   "license": "ISC",
   "description": "",
   "dependencies": {
